# nickel_view

./: Cargo.toml  MIT-LICENSE  README.md
examples/: main.rs
examples/templates/layouts/: default.mustache
examples/templates/welcome/: _form.mustache  index.mustache
src/: view.rs
